# FolderHash

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: hash.rs  main.rs
