[package]
name = "folderhash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake2 = "0.10"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
hex = "0.4"
