[package]
name = "folderhash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake2b_simd = { version = "1", features = ["neon"] }
blake3 = { version = "1", features = ["neon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm", "asm-aarch64"] }
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
hex = "0.4"
rayon = "1"
highway = "0.8"
wyhash = "0.5"
rapidhash = "1"
