[package]
name = "folderhash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake2b_simd = "1"
blake3 = { version = "1", features = ["neon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
hex = "0.4"
rayon = "1"
highway = "1.3"
wyhash = "0.6"
rapidhash = "4"
gxhash = "3.5.0"
t1ha = "0.1.2"
sha3 = "0.10"
k12 = "0.3"
md-5 = "0.10"
crc = "3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
sha1 = { version = "0.10", features = ["asm"] }
sha2 = { version = "0.10", features = ["asm", "asm-aarch64"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha1 = "0.10"
sha2 = "0.10"
